syntax = "proto3";

message IntClass {
    int32 int1 = 1;
    int32 int2 = 2;
    int32 int3 = 3;
    int32 int4 = 4;
}

message FloatClass {
    float float1 = 1;
    float float2 = 2;
    float float3 = 3;
    float float4 = 4;
}

message StringClass {
    string string1 = 1;
    string string2 = 2;
    string string3 = 3;
    string string4 = 4;
}